Yet another IE 7 hasLayout issue with the navigation fixed.

--- a/wdn/templates_3.0/css/ie.css
+++ b/wdn/templates_3.0/css/ie.css
@@ -56,6 +56,7 @@ ul#wdn_tool_links li {
 }
 
 /** CSS3 Workarounds for #navigation **/
+#wdn_navigation_wrapper {zoom:1;}
 #navigation > ul > li.start  {
     clear:left;
 }
